Errors/BuyMe_log.txt
12:09:21, root ERROR Message: 
Stacktrace:
Backtrace:
	(No symbol) [0x0061DCE3]
	(No symbol) [0x005B39D1]
	(No symbol) [0x004C4DA8]
	(No symbol) [0x004F019F]
	(No symbol) [0x004F03AB]
	(No symbol) [0x0051EE62]
	(No symbol) [0x0050AF14]
	(No symbol) [0x0051D57C]
	(No symbol) [0x0050ACC6]
	(No symbol) [0x004E6F68]
	(No symbol) [0x004E80CD]
	GetHandleVerifier [0x00893832+2506274]
	GetHandleVerifier [0x008C9794+2727300]
	GetHandleVerifier [0x008CE36C+2746716]
	GetHandleVerifier [0x006C6690+617600]
	(No symbol) [0x005BC712]
	(No symbol) [0x005C1FF8]
	(No symbol) [0x005C20DB]
	(No symbol) [0x005CC63B]
	BaseThreadInitThunk [0x75F800F9+25]
	RtlGetAppContainerNamedObjectPath [0x777A7BBE+286]
	RtlGetAppContainerNamedObjectPath [0x777A7B8E+238]
 
Traceback (most recent call last):
  File "C:\Users\shabil\Downloads\Python Automation Files\BuyMe_Project\base_page.py", line 122, in wait_and_click_on_element
    WebDriverWait(driver, timeout).until(EC.element_to_be_clickable(locator)).click()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shabil\AppData\Local\pypoetry\Cache\virtualenvs\buyme-project-Kmx6Pdi--py3.11\Lib\site-packages\selenium\webdriver\support\wait.py", line 95, in until
    raise TimeoutException(message, screen, stacktrace)
selenium.common.exceptions.TimeoutException: Message: 
Stacktrace:
Backtrace:
	(No symbol) [0x0061DCE3]
	(No symbol) [0x005B39D1]
	(No symbol) [0x004C4DA8]
	(No symbol) [0x004F019F]
	(No symbol) [0x004F03AB]
	(No symbol) [0x0051EE62]
	(No symbol) [0x0050AF14]
	(No symbol) [0x0051D57C]
	(No symbol) [0x0050ACC6]
	(No symbol) [0x004E6F68]
	(No symbol) [0x004E80CD]
	GetHandleVerifier [0x00893832+2506274]
	GetHandleVerifier [0x008C9794+2727300]
	GetHandleVerifier [0x008CE36C+2746716]
	GetHandleVerifier [0x006C6690+617600]
	(No symbol) [0x005BC712]
	(No symbol) [0x005C1FF8]
	(No symbol) [0x005C20DB]
	(No symbol) [0x005CC63B]
	BaseThreadInitThunk [0x75F800F9+25]
	RtlGetAppContainerNamedObjectPath [0x777A7BBE+286]
	RtlGetAppContainerNamedObjectPath [0x777A7B8E+238]

12:13:20, root ERROR Message: invalid selector: Unable to locate an element with the xpath expression //span[contains(text()='300-499')] because of the following error:
SyntaxError: Failed to execute 'evaluate' on 'Document': The string '//span[contains(text()='300-499')]' is not a valid XPath expression.
  (Session info: chrome=111.0.5563.111)
Stacktrace:
Backtrace:
	(No symbol) [0x0061DCE3]
	(No symbol) [0x005B39D1]
	(No symbol) [0x004C4DA8]
	(No symbol) [0x004C76FB]
	(No symbol) [0x004C75D0]
	(No symbol) [0x004C7850]
	(No symbol) [0x004EFDF8]
	(No symbol) [0x004F03AB]
	(No symbol) [0x0051EE62]
	(No symbol) [0x0050AF14]
	(No symbol) [0x0051D57C]
	(No symbol) [0x0050ACC6]
	(No symbol) [0x004E6F68]
	(No symbol) [0x004E80CD]
	GetHandleVerifier [0x00893832+2506274]
	GetHandleVerifier [0x008C9794+2727300]
	GetHandleVerifier [0x008CE36C+2746716]
	GetHandleVerifier [0x006C6690+617600]
	(No symbol) [0x005BC712]
	(No symbol) [0x005C1FF8]
	(No symbol) [0x005C20DB]
	(No symbol) [0x005CC63B]
	BaseThreadInitThunk [0x75F800F9+25]
	RtlGetAppContainerNamedObjectPath [0x777A7BBE+286]
	RtlGetAppContainerNamedObjectPath [0x777A7B8E+238]
 
Traceback (most recent call last):
  File "C:\Users\shabil\Downloads\Python Automation Files\BuyMe_Project\base_page.py", line 122, in wait_and_click_on_element
    WebDriverWait(driver, timeout).until(EC.element_to_be_clickable(locator)).click()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shabil\AppData\Local\pypoetry\Cache\virtualenvs\buyme-project-Kmx6Pdi--py3.11\Lib\site-packages\selenium\webdriver\support\wait.py", line 86, in until
    value = method(self._driver)
            ^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shabil\AppData\Local\pypoetry\Cache\virtualenvs\buyme-project-Kmx6Pdi--py3.11\Lib\site-packages\selenium\webdriver\support\expected_conditions.py", line 334, in _predicate
    target = driver.find_element(*target)  # grab element at locator
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shabil\AppData\Local\pypoetry\Cache\virtualenvs\buyme-project-Kmx6Pdi--py3.11\Lib\site-packages\selenium\webdriver\remote\webdriver.py", line 831, in find_element
    return self.execute(Command.FIND_ELEMENT, {"using": by, "value": value})["value"]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shabil\AppData\Local\pypoetry\Cache\virtualenvs\buyme-project-Kmx6Pdi--py3.11\Lib\site-packages\selenium\webdriver\remote\webdriver.py", line 440, in execute
    self.error_handler.check_response(response)
  File "C:\Users\shabil\AppData\Local\pypoetry\Cache\virtualenvs\buyme-project-Kmx6Pdi--py3.11\Lib\site-packages\selenium\webdriver\remote\errorhandler.py", line 245, in check_response
    raise exception_class(message, screen, stacktrace)
selenium.common.exceptions.InvalidSelectorException: Message: invalid selector: Unable to locate an element with the xpath expression //span[contains(text()='300-499')] because of the following error:
SyntaxError: Failed to execute 'evaluate' on 'Document': The string '//span[contains(text()='300-499')]' is not a valid XPath expression.
  (Session info: chrome=111.0.5563.111)
Stacktrace:
Backtrace:
	(No symbol) [0x0061DCE3]
	(No symbol) [0x005B39D1]
	(No symbol) [0x004C4DA8]
	(No symbol) [0x004C76FB]
	(No symbol) [0x004C75D0]
	(No symbol) [0x004C7850]
	(No symbol) [0x004EFDF8]
	(No symbol) [0x004F03AB]
	(No symbol) [0x0051EE62]
	(No symbol) [0x0050AF14]
	(No symbol) [0x0051D57C]
	(No symbol) [0x0050ACC6]
	(No symbol) [0x004E6F68]
	(No symbol) [0x004E80CD]
	GetHandleVerifier [0x00893832+2506274]
	GetHandleVerifier [0x008C9794+2727300]
	GetHandleVerifier [0x008CE36C+2746716]
	GetHandleVerifier [0x006C6690+617600]
	(No symbol) [0x005BC712]
	(No symbol) [0x005C1FF8]
	(No symbol) [0x005C20DB]
	(No symbol) [0x005CC63B]
	BaseThreadInitThunk [0x75F800F9+25]
	RtlGetAppContainerNamedObjectPath [0x777A7BBE+286]
	RtlGetAppContainerNamedObjectPath [0x777A7B8E+238]

12:19:16, root ERROR Message: 
Stacktrace:
Backtrace:
	(No symbol) [0x0061DCE3]
	(No symbol) [0x005B39D1]
	(No symbol) [0x004C4DA8]
	(No symbol) [0x004F019F]
	(No symbol) [0x004F03AB]
	(No symbol) [0x0051EE62]
	(No symbol) [0x0050AF14]
	(No symbol) [0x0051D57C]
	(No symbol) [0x0050ACC6]
	(No symbol) [0x004E6F68]
	(No symbol) [0x004E80CD]
	GetHandleVerifier [0x00893832+2506274]
	GetHandleVerifier [0x008C9794+2727300]
	GetHandleVerifier [0x008CE36C+2746716]
	GetHandleVerifier [0x006C6690+617600]
	(No symbol) [0x005BC712]
	(No symbol) [0x005C1FF8]
	(No symbol) [0x005C20DB]
	(No symbol) [0x005CC63B]
	BaseThreadInitThunk [0x75F800F9+25]
	RtlGetAppContainerNamedObjectPath [0x777A7BBE+286]
	RtlGetAppContainerNamedObjectPath [0x777A7B8E+238]
 
Traceback (most recent call last):
  File "C:\Users\shabil\Downloads\Python Automation Files\BuyMe_Project\base_page.py", line 122, in wait_and_click_on_element
    WebDriverWait(driver, timeout).until(EC.element_to_be_clickable(locator)).click()
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\shabil\AppData\Local\pypoetry\Cache\virtualenvs\buyme-project-Kmx6Pdi--py3.11\Lib\site-packages\selenium\webdriver\support\wait.py", line 95, in until
    raise TimeoutException(message, screen, stacktrace)
selenium.common.exceptions.TimeoutException: Message: 
Stacktrace:
Backtrace:
	(No symbol) [0x0061DCE3]
	(No symbol) [0x005B39D1]
	(No symbol) [0x004C4DA8]
	(No symbol) [0x004F019F]
	(No symbol) [0x004F03AB]
	(No symbol) [0x0051EE62]
	(No symbol) [0x0050AF14]
	(No symbol) [0x0051D57C]
	(No symbol) [0x0050ACC6]
	(No symbol) [0x004E6F68]
	(No symbol) [0x004E80CD]
	GetHandleVerifier [0x00893832+2506274]
	GetHandleVerifier [0x008C9794+2727300]
	GetHandleVerifier [0x008CE36C+2746716]
	GetHandleVerifier [0x006C6690+617600]
	(No symbol) [0x005BC712]
	(No symbol) [0x005C1FF8]
	(No symbol) [0x005C20DB]
	(No symbol) [0x005CC63B]
	BaseThreadInitThunk [0x75F800F9+25]
	RtlGetAppContainerNamedObjectPath [0x777A7BBE+286]
	RtlGetAppContainerNamedObjectPath [0x777A7B8E+238]

